crates/pixi_build_ros/src/snapshots/pixi_build_ros_gr__tests__recipe_includes_project_run_dependency.snap
---
source: crates/pixi_build_ros/src/main.rs
expression: generated.recipe
---
schema_version: 1
package:
  name: custom_ros
  version: 0.0.1
build:
  script: "[script]"
  python:
    entry_points: []
    skip_pyc_compilation: []
    use_python_app_entrypoint: false
  skip: []
  always_copy_files: []
  always_include_files: []
  merge_build_and_host_envs: false
  files: []
  dynamic_linking:
    rpaths: []
    binary_relocation: true
    missing_dso_allowlist: []
    rpath_allowlist: []
  variant:
    use_keys: []
    ignore_keys: []
  prefix_detection:
    force_file_type:
      text: []
      binary: []
    ignore: false
    ignore_binary_files: false
  post_process: []
requirements:
  build:
    - ros-noetic-catkin
    - ros-noetic-ros-package
    - ros-noetic-multi-package
    - ninja
    - python
    - setuptools
    - git
    - git-lfs
    - cmake
    - cpython
    - patch
    - make
    - coreutils
    - "${{ compiler('c') }}"
    - "${{ compiler('cxx') }}"
  host:
    - ros-noetic-catkin
    - ros-noetic-ros-package
    - ros-noetic-multi-package
    - python
    - numpy
    - pip
    - pkg-config
    - ros-distro-mutex 0.15.*
  run:
    - rich >=10.0
    - ros-noetic-ros-package
    - ros-noetic-multi-package
    - ros-distro-mutex 0.15.*
about:
  homepage: "https://test.io/custom_ros"
  summary: Demo
  description: Demo
  repository: "https://github.com/test/custom_ros"
extra: {}
